# templates

./: BSD-3-Clause  MIT
c/: .clang-format  flake.nix  meson.build
c/nix/: default.nix  overlays.nix  shell.nix
c/src/: main.c  main.cpp  meson.build
c_windows/: .clang-format  README.md  flake.nix  meson.build
c_windows/cross/: .gitignore  gensysrootini.sh  windows-x64.ini
c_windows/nix/: default.nix  overlays.nix  shell.nix
c_windows/src/: main.c  main.cpp
lua/: .stylua.toml
nix/: flake.nix
nix-shell/: flake.nix
nix-shell/nix/: shell.nix
nix/nix/: default.nix  overlays.nix  shell.nix
odin/: Makefile  flake.nix  odinfmt.json  ols.json
odin/nix/: default.nix  overlays.nix  shell.nix
odin/src/: main.odin
rust/: Cargo.toml  flake.nix
rust-workspaces/: Cargo.toml  flake.nix
rust-workspaces/fooname/: Cargo.toml
rust-workspaces/fooname/src/: main.rs
rust-workspaces/lib/: Cargo.toml
rust-workspaces/lib/src/: lib.rs
rust-workspaces/nix/: default.nix  lib.nix  overlays.nix  shell.nix
rust-workspaces/workspace-hack/: Cargo.toml
rust/nix/: default.nix  lib.nix  overlays.nix  shell.nix
rust/src/: main.rs
