[workspace]
resolver = "3"
members = [ "fooname", "lib", "workspace-hack" ]

[workspace.metadata.crane]
name = "fooname"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = [ "spitulax" ]
description = "foodesc"
readme = "README.md"
homepage = "https://github.com/spitulax/fooname"
repository = "https://github.com/spitulax/fooname"
license = "MIT"
keywords = [ ]
categories = [ ] # https://crates.io/category_slugs

[workspace.dependencies]
