[package]
name = "fooname"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lib = { path = "../lib" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
